--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
     <header class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to "sample app", '#', id: "logo" %>
+        <%= link_to image_tag("logo.png", :alt => "Sample App", :class => "round") %>
+         
           <nav>
             <ul class="nav pull-right">
               <li><%= link_to "Home",    '#' %></li>
